--- a/Resources/sprites/balls.plist
+++ b/Resources/sprites/balls.plist
@@ -11,11 +11,71 @@
                 <key>spriteOffset</key>
                 <string>{1,1}</string>
                 <key>spriteSize</key>
-                <string>{77,77}</string>
+                <string>{95,95}</string>
                 <key>spriteSourceSize</key>
-                <string>{77,77}</string>
+                <string>{95,95}</string>
                 <key>textureRect</key>
-                <string>{{1,1},{77,77}}</string>
+                <string>{{1,1},{95,95}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>yellow.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{1,1}</string>
+                <key>spriteSize</key>
+                <string>{95,95}</string>
+                <key>spriteSourceSize</key>
+                <string>{95,95}</string>
+                <key>textureRect</key>
+                <string>{{98,1},{95,95}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>blue.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{1,1}</string>
+                <key>spriteSize</key>
+                <string>{95,95}</string>
+                <key>spriteSourceSize</key>
+                <string>{95,95}</string>
+                <key>textureRect</key>
+                <string>{{195,1},{95,95}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>green.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{1,1}</string>
+                <key>spriteSize</key>
+                <string>{95,95}</string>
+                <key>spriteSourceSize</key>
+                <string>{95,95}</string>
+                <key>textureRect</key>
+                <string>{{292,1},{95,95}}</string>
+                <key>textureRotated</key>
+                <false/>
+            </dict>
+            <key>red.png</key>
+            <dict>
+                <key>aliases</key>
+                <array/>
+                <key>spriteOffset</key>
+                <string>{1,1}</string>
+                <key>spriteSize</key>
+                <string>{95,95}</string>
+                <key>spriteSourceSize</key>
+                <string>{95,95}</string>
+                <key>textureRect</key>
+                <string>{{389,1},{95,95}}</string>
                 <key>textureRotated</key>
                 <false/>
             </dict>
